--- a/IntroTaskWebApi/appsettings.json
+++ b/IntroTaskWebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=localhost;database=StudentDb1;User=root;Password=pxD&9>pti:sR;"
+  },
   "AllowedHosts": "*"
 }
