--- a/IntroTaskWebApi/appsettings.json
+++ b/IntroTaskWebApi/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "sqlConnection": "server=localhost;database=StudentDb1;User=root;Password=pxD&9>pti:sR;"
   },
+  "JwtSettings": {
+    "validIssuer": "IntroTaskWebApi",
+    "validAudience": "https://localhost:7296",
+    "expires": 5
+  },
   "AllowedHosts": "*"
 }
